# Telemetry-Server

./: CMakeLists.txt  config.c  config.json  data_generator.c  data_generator.h  logger.c  logger.h  main.c  serialization.c  serialization.h  server.c  server.h
configs/: battery.json  config.json  gps.json  humidity.json  power.json  pressure.json  temperature.json  vibration.json
include/: config.h  data_generator.h  logger.h  serialization.h  server.h
src/: config.c  data_generator.c  logger.c  main.c  serialization.c  server.c
